; ModuleID = '/home/carl/AnghaBench/h2o/lib/extr_http1.c_on_continue_sent.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/extr_http1.c_on_continue_sent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.st_h2o_http1_conn_t* }
%struct.st_h2o_http1_conn_t = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (%struct.st_h2o_http1_conn_t*)* }

@reqread_on_read = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i8*)* @on_continue_sent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_continue_sent(%struct.TYPE_6__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.st_h2o_http1_conn_t*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %7, align 8
  store %struct.st_h2o_http1_conn_t* %8, %struct.st_h2o_http1_conn_t** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %13 = call i32 @close_connection(%struct.st_h2o_http1_conn_t* %12, i32 1)
  br label %25

14:                                               ; preds = %2
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %16 = load i32, i32* @reqread_on_read, align 4
  %17 = call i32 @h2o_socket_read_start(%struct.TYPE_6__* %15, i32 %16)
  %18 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %19 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %18, i32 0, i32 0
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32 (%struct.st_h2o_http1_conn_t*)*, i32 (%struct.st_h2o_http1_conn_t*)** %21, align 8
  %23 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %24 = call i32 %22(%struct.st_h2o_http1_conn_t* %23)
  br label %25

25:                                               ; preds = %14, %11
  ret void
}

declare dso_local i32 @close_connection(%struct.st_h2o_http1_conn_t*, i32) #1

declare dso_local i32 @h2o_socket_read_start(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
